--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-po2mo": "^0.1.2",
-    "grunt-wp-i18n": "^0.5.4",
-    "gulp": "^3.9.1"
+    "grunt-wp-i18n": "^0.5.4"
   }
 }
