--- a/package.json
+++ b/package.json
@@ -18,8 +18,17 @@
   "author": "Casper Houde",
   "license": "ISC",
   "devDependencies": {
+    "coffeeify": "^2.1.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-po2mo": "^0.1.2",
-    "grunt-wp-i18n": "^0.5.4"
+    "grunt-wp-i18n": "^0.5.4",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-clean-css": "^1.5.1",
+    "video.js": "^5.12.6"
+  },
+  "dependencies": {
+    "grunt-browserify": "^5.0.0"
   }
 }
