The Big Refactor: try to make the wordpress plugin more sensible by splitting it into classes

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "casper@isset.nl"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "IssetBV\\VideoPublisher\\Wordpress\\": "plugin/src"
+        }
+    }
 }
