--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - WORDPRESS_DB_PASSWORD=kaakje
       - WORDPRESS_DB_NAME=wordpress
     volumes:
+      - ./.docker-context/wordpress:/var/www/html
       - ./plugin:/var/www/html/wp-content/plugins/isset-video-publisher
   mysql:
     image: mysql:5.7
-    restart: always
     environment:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
