--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "clean": "npm cache clean",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "wp-scripts": "wp-scripts build"
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,20 @@
   "author": "Isset Internet Professionals",
   "license": "ISC",
   "dependencies": {
+    "@wordpress/block-editor": "^3.7.6",
+    "@wordpress/blocks": "^6.12.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "video.js": "^7.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
     "@webpack-cli/init": "^0.2.2",
+    "@wordpress/scripts": "^7.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "css-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
