--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@wordpress/blocks": "^6.12.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "video.js": "^7.7.5"
+    "video.js": "^7.7.5",
+    "videojs-airplay": "^1.1.1",
+    "videojs-chromecast": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -37,6 +39,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "css-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
