Pipeline dev to test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build:
 publish_nightly:
   only:
     - master
+    - develop
   script:
     - apt install -y -f openssh-client
     - eval "$(ssh-agent)"
