--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "author": "Isset Internet Professionals",
   "license": "ISC",
   "dependencies": {
+    "@silvermine/videojs-airplay": "^1.0.0",
     "@wordpress/block-editor": "^3.7.6",
     "@wordpress/blocks": "^6.12.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "video.js": "^7.7.5",
-    "videojs-airplay": "^1.1.1",
-    "videojs-chromecast": "^2.0.8"
+    "underscore": "^1.10.2",
+    "video.js": "^7.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
