--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Wordpress plugin for the video publisher from https://video-publisher.io",
     "authors": [
         {
-            "name": "Isset Internet Professionals",
+            "name": "isset.video",
             "email": "info@isset.nl"
         }
     ],
