--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@leochen1216/videojs-chromecast": "^2.0.0",
     "@wordpress/block-editor": "^3.7.6",
     "@wordpress/blocks": "^6.12.2",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "underscore": "^1.10.2",
