--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@wordpress/blocks": "^6.12.2",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "underscore": "^1.10.2",
@@ -37,6 +39,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@webpack-cli/init": "^0.2.2",
     "@wordpress/scripts": "^7.1.3",
     "babel-core": "^6.26.3",
