--- a/js/overview/.babelrc
+++ b/js/overview/.babelrc
@@ -2,6 +2,9 @@
     "presets": ["@babel/preset-react"],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        ["transform-react-jsx", {"pragma": "React.createElement"}]
+        ["transform-react-jsx", {"pragma": "React.createElement"}],
+        [ "@wordpress/babel-plugin-makepot", {
+            "output": "languages/isset-video-publisher-js-overview.pot"
+        } ]
     ]
 }
