--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@silvermine/videojs-chromecast": "^1.2.1",
     "@wordpress/block-editor": "^3.7.6",
     "@wordpress/blocks": "^6.12.2",
+    "@wordpress/i18n": "^3.16.0",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
@@ -42,6 +43,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@webpack-cli/init": "^0.2.2",
+    "@wordpress/babel-plugin-makepot": "^3.9.0",
     "@wordpress/scripts": "^7.1.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
