--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "require": {
       "ext-json": "*"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*",
+        "wp-coding-standards/wpcs": "^2.3",
+        "dealerdirect/phpcodesniffer-composer-installer": "*"
+    },
     "autoload": {
         "psr-4": {
             "IssetBV\\VideoPublisher\\Wordpress\\": "plugin/src"
         }
-    },
-    "require-dev": {
-        "timber/timber": "^1.15"
     }
 }
