--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.0.0",
+    "node-sass": "^6.0.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "10.1.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.36.1",
     "webpack-cli": "^4.7.0",
