--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "underscore": "^1.10.2",
     "video.js": "^7.7.6",
     "videojs-contrib-quality-levels": "^2.0.9",
-    "videojs-http-source-selector": "^1.1.6"
+    "videojs-http-source-selector": "^1.1.6",
+    "videojs-ima": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
